fix(ffe-grid): larger col padding on small devices

--- a/packages/ffe-grid/less/ffe-grid.less
+++ b/packages/ffe-grid/less/ffe-grid.less
@@ -300,7 +300,7 @@
     flex: 1 1;
     flex-direction: column;
     max-width: 100%;
-    padding: 0 (@ffe-grid-gutter-sm / 2) @ffe-grid-gutter-sm;
+    padding: 0 @ffe-grid-gutter-sm @ffe-grid-gutter-sm;
 
     @media (min-width: @breakpoint-lg) {
         padding: 0 (@ffe-grid-gutter-lg / 2) @ffe-grid-gutter-lg;
